--- a/Readme
+++ b/Readme
@@ -1,1 +1,2 @@
-
+For Project 2 we will be telling the story of Black Friday purchases using the Kaggle Black Friday dataset. 
+This will be found by looking at the different variables such as gender, occupation, location, age and purchases.
